Add Performance Schema table
Signed-off-by: Frederic Descamps <lefred.descamps@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@
 DISABLE_MISSING_PROFILE_WARNING()
 
 MYSQL_ADD_COMPONENT(viruscan
-  scan.cc 
+  scan.cc
+  scan_pfs.cc 
   MODULE_ONLY
   TEST_ONLY
   LINK_LIBRARIES clamav
